package edu.fiuba.algo3.modelo.Parcela;

import edu.fiuba.algo3.modelo.Defensa.Defensa;

public interface Parcela {
    public boolean construirDefensa(Defensa unaDefensa);
}
