@startuml

class Juego {
    +verificarNombre(nombre:String):void
    +pasarTurno():void
    -terminoElJuego():void
    -moverEnemigos():void
}

interface Verificar {
    {abstract}+verificarNombre(nombre:String):void
}

class Jugador{}
interface Parcela{}

Verificar <|..Juego
Juego "1" o-- "1" Jugador
Juego "1" o-- "*" Parcela

@enduml